...
        tableView.translatesAutoresizingMaskIntoConstraints = false
        tableView.backgroundColor = .clear
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 118
        tableView.separatorStyle = .none
        tableView.register(OfferCardTableViewCell.self, forCellReuseIdentifier: OfferCardTableViewCell.reuseIdentifier)
        tableView.accessibilityIdentifier = "offers_table"
        tableView.dataSource = self
        tableView.delegate = self

        refreshControl.tintColor = .dsAccent
        tableView.refreshControl = refreshControl

...
